# snakemake-web-api

./: .gitignore  CLI_COMMANDS.md  Developer_Guide.md  GEMINI.md  QWEN.md  README.md  pyproject.toml  run_demo_wrapper.sh
src/snakemake_mcp_server/: demo_runner.py  fastapi_app.py  jobs.py  schemas.py  server.py  snakefile_parser.py  utils.py  workflow_runner.py  wrapper_runner.py
src/snakemake_mcp_server/api/: main.py
src/snakemake_mcp_server/api/routes/: demo.py  demos.py  tool_processes.py  tools.py  workflow_processes.py  workflows.py
src/snakemake_mcp_server/cli/: parse.py  rest.py  run.py  verify.py
tests/: conftest.py  test_all_wrapper_demos_integration.py  test_connectivity.py  test_demo_api_integration.py  test_first_wrapper_demo.py  test_get_wrapper_meta_api.py  test_list_jobs.py  test_list_tools.py  test_mcp_api_integration.py  test_megahit_wrapper.py  test_rest_api_integration.py  test_run_wrapper_error.py  test_run_wrapper_success.py  test_shadow_wrapper.py  test_single_wrapper_api_demo.py  test_snakefile_parser.py  test_workflow_api.py  test_workflow_execution.py  test_wrapper_api_completeness.py  test_wrapper_logic_integration.py  test_wrapper_runner.py  test_wrapper_runner_directly.py
