[project]
name = "snakemake-mcp-server"
version = "0.1.0"
description = "A server for running Snakemake wrappers via MCP."
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = [
    "fastmcp",
    "snakemake",
    "anyio",
    "pytest",
    "click",
    "snakemake-wrappers",
]

[project.scripts]
"snakemake-mcp-server" = "snakemake_mcp_server.server:cli"

[project.urls]
"Homepage" = "https://github.com/snakemake/snakemake-wrappers"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
