[project]
name = "snakemake-mcp-server"
version = "0.1.0"
description = "A server for running Snakemake wrappers via MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "snakemake",
    "click",
    "snakemake-wrapper-utils>=0.8.0",
    "pandas>=2.3.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
"snakemake-mcp-server" = "snakemake_mcp_server.server:cli"

[project.urls]
"Homepage" = "https://github.com/excelwang/snakemake-mcp-server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
